Fill the applicabilities when reading a modification and copying a composite
getModificationInfo left them out, so unfolding a shared modification in the
front end showed every row as applicable. insertCompositeModifications built
its copies from a DTO that never carries them, so an unshared copy was born
with none at any level.

Signed-off-by: Florent MILLOT <75525996+flomillot@users.noreply.github.com>